<resources>
    <string name="app_name">Dev Tiles</string>

    <!-- Tile labels -->
    <string name="label_toggle_usb_debugging">USB Debugging</string>
    <string name="label_keep_screen_on">Keep screen on</string>
    <string name="label_toggle_show_touches">Show taps</string>
    <string name="label_toggle_demo_mode">Demo mode</string>
    <string name="label_toggle_animator_duration_scale">Toggle animator duration scale</string>

    <string name="animation_off">Animation off</string>
    <string name="animation_scale_0_5x">Animation scale .5x</string>
    <string name="animation_scale_1x">Animation scale 1x</string>
    <string name="animation_scale_1_5x">Animation scale 1.5x</string>
    <string name="animation_scale_2x">Animation scale 2x</string>
    <string name="animation_scale_5x">Animation scale 5x</string>
    <string name="animation_scale_10x">Animation scale 10x</string>

    <string name="permission_required_toast">Need to grant permission</string>

    <!-- Animator duration picker -->
    <string name="dialog_animator_duration_title">Animator duration scale</string>

    <!-- Home screen -->
    <string name="grant_permission">Grant Permissions</string>
    <string name="permission_command">adb shell pm grant xyz.mustafaali.devqstiles android.permission.WRITE_SECURE_SETTINGS\n\nadb shell pm grant xyz.mustafaali.devqstiles android.permission.DUMP</string>
    <string name="btn_label_share">Share</string>

    <string name="features_title">Available Tiles</string>

    <string name="features_description">
        <![CDATA[
        <b>Toggle USB Debugging</b> <br />
        Enable/disable USB debugging right from your notification drawer <br /><br />
        <b>Toggle Keep Screen On</b> <br />
        Keep screen on when connected via USB, but turn it off if connected to a wall charger  <br /><br />
        <b>Show touches</b> <br />
        Because others can\'t see where you are tapping during demos <br /><br />
        <b>Toggle Demo Mode</b> <br />
        No more status bar clutter during demos or in screenshots <br /><br />
        <b>Toggle Animator Duration</b> <br />
        Easily debug your fancy animations
        ]]>
    </string>

    <string name="menu_share_app">Share App</string>
    <string name="msg_share_app">Check out Dev Tiles on Google Play – https://play.google.com/store/apps/details?id=xyz.mustafaali.devqstiles</string>
    <string name="menu_licenses">Licenses</string>
    <string name="menu_rate_app">Rate app</string>
    <string name="menu_request_feature">Request feature</string>
</resources>
